[package]
name = "markdown-server"
version = "0.1.0"
edition = "2021"

[lib]
name = "md_server"
test = false
path = "src/md_server/mod.rs"

[dependencies]
hyper = "1.4.1"
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hyper-tls = "0.5"
reqwest = { version = "0.12", features = ["json"] }
rustdown = { git = "https://github.com/antonieto/rustmd", branch = "master" }
base64 = "0.22.1"
